fdo#74747: Make use of cached string formula results.

Just like we do with cached numeric formula results.

Change-Id: Ib8b311b540caeb47d8c2162a456f7490c5882ad5